[gd_scene load_steps=28 format=2]

[ext_resource path="res://images/circle_05.png" type="Texture" id=1]
[ext_resource path="res://images/spacefield_a-000.png" type="Texture" id=2]
[ext_resource path="res://scripts/BuildInjectButton.gd" type="Script" id=3]
[ext_resource path="res://scripts/RingSystem.gd" type="Script" id=4]
[ext_resource path="res://scripts/InjectorMultimesh.gd" type="Script" id=5]
[ext_resource path="res://scripts/InjectionSystem.gd" type="Script" id=6]
[ext_resource path="res://scenes/Ring.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Shields.gd" type="Script" id=8]
[ext_resource path="res://images/trash.png" type="Texture" id=9]
[ext_resource path="res://scripts/Injector.gd" type="Script" id=10]
[ext_resource path="res://resources/SlelectionButtonGroup.tres" type="ButtonGroup" id=11]
[ext_resource path="res://resources/PauseButtonGroup.tres" type="ButtonGroup" id=12]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=13]
[ext_resource path="res://scripts/InfoDialog.gd" type="Script" id=14]
[ext_resource path="res://scripts/PauseFF.gd" type="Script" id=15]
[ext_resource path="res://scripts/BinLane.gd" type="Script" id=16]
[ext_resource path="res://scripts/InputCapture.gd" type="Script" id=17]

[sub_resource type="InputEventAction" id=24]
action = "ui_pause"

[sub_resource type="ShortCut" id=25]
shortcut = SubResource( 24 )

[sub_resource type="GDScript" id=2]
script/source = "extends Button

func _on_Outlines_toggled(button_pressed):
	for o in get_tree().get_nodes_in_group(\"RingOutlineGroup\"):
		o.set_show(!button_pressed)
	for i in get_tree().get_nodes_in_group(\"InjectorGroup\"):
		i.get_parent().set_show(!button_pressed)
"

[sub_resource type="QuadMesh" id=26]
size = Vector2( 10, 10 )

[sub_resource type="MultiMesh" id=27]
mesh = SubResource( 26 )

[sub_resource type="QuadMesh" id=28]
size = Vector2( 10, 10 )

[sub_resource type="MultiMesh" id=29]
mesh = SubResource( 28 )

[sub_resource type="QuadMesh" id=30]
size = Vector2( 10, 10 )

[sub_resource type="MultiMesh" id=31]
mesh = SubResource( 30 )

[sub_resource type="Environment" id=9]
background_mode = 4
glow_intensity = 2.0
glow_strength = 1.8
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true

[node name="Root" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoUI" type="Control" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/InfoUI"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoDialog" type="WindowDialog" parent="CanvasLayer/UI/InfoUI/CenterContainer"]
visible = true
margin_left = 384.0
margin_top = 200.0
margin_right = 640.0
margin_bottom = 400.0
rect_min_size = Vector2( 256, 200 )
custom_constants/scaleborder_size = 0
window_title = "Ring"
resizable = true
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RingContainer" type="MarginContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 212.0
margin_bottom = 155.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lanes" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
text = "Lanes"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 204.0
margin_bottom = 90.0
custom_constants/vseparation = 6
custom_constants/hseparation = 6
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L1" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_top = 9.0
margin_right = 12.0
margin_bottom = 23.0
text = "1:"

[node name="LIcon1" type="CenterContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 18.0
margin_right = 50.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LBin1" type="Button" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 56.0
margin_right = 88.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 94.0
margin_right = 110.0
margin_bottom = 32.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L2" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 116.0
margin_top = 9.0
margin_right = 128.0
margin_bottom = 23.0
text = "2:"

[node name="LIcon2" type="CenterContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 134.0
margin_right = 166.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LBin2" type="Button" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 172.0
margin_right = 204.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L3" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_top = 47.0
margin_right = 12.0
margin_bottom = 61.0
text = "3:"

[node name="LIcon3" type="CenterContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 18.0
margin_top = 38.0
margin_right = 50.0
margin_bottom = 70.0
rect_min_size = Vector2( 32, 32 )
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LBin3" type="Button" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 56.0
margin_top = 38.0
margin_right = 88.0
margin_bottom = 70.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 94.0
margin_top = 38.0
margin_right = 110.0
margin_bottom = 70.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L4" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 116.0
margin_top = 47.0
margin_right = 128.0
margin_bottom = 61.0
text = "4:"

[node name="LIcon4" type="CenterContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 134.0
margin_top = 38.0
margin_right = 166.0
margin_bottom = 70.0
rect_min_size = Vector2( 32, 32 )
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LBin4" type="Button" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer"]
margin_left = 172.0
margin_top = 38.0
margin_right = 204.0
margin_bottom = 70.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 204.0
margin_bottom = 112.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Factories" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 204.0
margin_bottom = 132.0
text = "Factories"

[node name="FactoriesList" type="ItemList" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 204.0
margin_bottom = 147.0
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FactoryContainer" type="MarginContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unset" type="VBoxContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/FactoryContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 32.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/FactoryContainer/Unset"]
margin_right = 110.0
margin_bottom = 14.0
text = "Configure Factory"
align = 1

[node name="Shunt" type="VBoxContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/FactoryContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 32.0
custom_constants/separation = 6

[node name="Make" type="VBoxContainer" parent="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/FactoryContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 32.0
custom_constants/separation = 6

[node name="MainUI" type="Control" parent="CanvasLayer/UI"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainerTop" type="MarginContainer" parent="CanvasLayer/UI/MainUI"]
margin_right = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/MainUI/MarginContainerTop"]
margin_right = 1024.0
margin_bottom = 20.0
grow_horizontal = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer"]
margin_left = 311.0
margin_right = 713.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="BuildMode" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer"]
margin_right = 85.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 11 )
text = "Build Mode"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 155.0
margin_bottom = 20.0
text = "Recipies"

[node name="Label" type="Label" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer"]
margin_left = 159.0
margin_top = 3.0
margin_right = 247.0
margin_bottom = 17.0
text = "Mission: 60 H"

[node name="Pause" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer"]
margin_left = 251.0
margin_right = 301.0
margin_bottom = 20.0
toggle_mode = true
shortcut = SubResource( 25 )
group = ExtResource( 12 )
text = "Pause"
script = ExtResource( 15 )

[node name="FF" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer"]
margin_left = 305.0
margin_right = 331.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 12 )
text = "FF"
script = ExtResource( 15 )

[node name="Outlines" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer"]
margin_left = 335.0
margin_right = 402.0
margin_bottom = 20.0
toggle_mode = true
text = "Outlines"
script = SubResource( 2 )

[node name="MarginContainerSide" type="MarginContainer" parent="CanvasLayer/UI/MainUI"]
pause_mode = 2
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/MainUI/MarginContainerSide"]
margin_right = 57.0
margin_bottom = 600.0
grow_horizontal = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer"]
margin_top = 238.0
margin_right = 57.0
margin_bottom = 362.0
custom_constants/separation = 32

[node name="IronButton0" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer"]
margin_right = 57.0
margin_bottom = 20.0
toggle_mode = true
group = ExtResource( 11 )
text = "Iron"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopperButton0" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 57.0
margin_bottom = 72.0
toggle_mode = true
group = ExtResource( 11 )
text = "Copper"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SilicaButton0" type="Button" parent="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 57.0
margin_bottom = 124.0
toggle_mode = true
group = ExtResource( 11 )
text = "Silica"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacefield_a-000" type="Sprite" parent="."]
position = Vector2( 640, 400 )
texture = ExtResource( 2 )

[node name="InputCapture" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 17 )

[node name="Shields" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CentreNode" type="Node2D" parent="."]
position = Vector2( 512, 300 )

[node name="RingSystem" type="Node2D" parent="CentreNode"]
script = ExtResource( 4 )
rings = 9

[node name="Ring0" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 0
set_debug_color = Color( 1, 0, 0, 1 )
radius_array = [ 40.0, 45.0, 50.0, 55.0 ]
angular_velocity = 2.0
n = 50.2655

[node name="Ring1" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 1
set_debug_color = Color( 1, 0.631373, 0, 1 )
radius_array = [ 80.0, 85.0, 90.0, 95.0 ]
angular_velocity = 1.0
n = 100.531

[node name="Ring2" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 2
set_debug_color = Color( 1, 0.937255, 0, 1 )
radius_array = [ 120.0, 125.0, 130.0, 135.0 ]
angular_velocity = 0.666667
n = 150.796

[node name="Ring3" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 3
set_debug_color = Color( 0, 0.0627451, 1, 1 )
radius_array = [ 160.0, 165.0, 170.0, 175.0 ]
angular_velocity = 0.5
n = 201.062

[node name="Ring4" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 4
set_debug_color = Color( 0, 0.952941, 1, 1 )
radius_array = [ 200.0, 205.0, 210.0, 215.0 ]
angular_velocity = 0.4
n = 251.327

[node name="Ring5" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 5
set_debug_color = Color( 0.101961, 0, 1, 1 )
radius_array = [ 240.0, 245.0, 250.0, 255.0 ]
angular_velocity = 0.333333
n = 301.593

[node name="Ring6" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 6
set_debug_color = Color( 0.384314, 0, 1, 1 )
radius_array = [ 280.0, 285.0, 290.0, 295.0 ]
angular_velocity = 0.285714
n = 351.858

[node name="Ring7" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_debug_color = Color( 0.756863, 0, 1, 1 )
angular_velocity = 0.25
n = 402.124

[node name="Ring8" parent="CentreNode/RingSystem" instance=ExtResource( 7 )]
set_ring = 8
set_debug_color = Color( 1, 0, 0.537255, 1 )
radius_array = [ 360.0, 365.0, 370.0, 375.0 ]
angular_velocity = 0.222222
n = 452.389

[node name="InjectionSystem" type="Node2D" parent="CentreNode"]
script = ExtResource( 6 )

[node name="Iron0" type="Node2D" parent="CentreNode/InjectionSystem"]
visible = false
script = ExtResource( 10 )
show = true

[node name="IronInjection0" type="MultiMeshInstance2D" parent="CentreNode/InjectionSystem/Iron0" groups=[
"InjectorGroup",
]]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( -3.46068, 0 )
multimesh = SubResource( 27 )
texture = ExtResource( 1 )
script = ExtResource( 5 )
set_resource = "iron"
linear_velocity = 84.2857
radius = 295.0
lane = 3
ring = NodePath("../MultiMeshInstance2D/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6189/@@6028/@@6029/@@6030/@@6031/@@6032/Root/CentreNode/RingSystem/Ring6")

[node name="Copper0" type="Node2D" parent="CentreNode/InjectionSystem"]
visible = false
script = ExtResource( 10 )
show = true

[node name="CopperInjection0" type="MultiMeshInstance2D" parent="CentreNode/InjectionSystem/Copper0" groups=[
"InjectorGroup",
]]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( -12.1307, 0 )
multimesh = SubResource( 29 )
texture = ExtResource( 1 )
script = ExtResource( 5 )
set_resource = "copper"
linear_velocity = 82.8571
radius = 290.0
lane = 2
ring = NodePath("../MultiMeshInstance2D/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6189/@@6028/@@6029/@@6030/@@6031/@@6032/Root/CentreNode/RingSystem/Ring6")

[node name="Silica0" type="Node2D" parent="CentreNode/InjectionSystem"]
visible = false
script = ExtResource( 10 )
show = true

[node name="SilicaInjection0" type="MultiMeshInstance2D" parent="CentreNode/InjectionSystem/Silica0" groups=[
"InjectorGroup",
]]
modulate = Color( 0.8, 0.8, 0, 1 )
position = Vector2( -20.7248, 0 )
multimesh = SubResource( 31 )
texture = ExtResource( 1 )
script = ExtResource( 5 )
set_resource = "silica"
linear_velocity = 81.4286
radius = 285.0
lane = 1
ring = NodePath("../MultiMeshInstance2D/root/EditorNode/@@592/@@593/@@601/@@603/@@607/@@611/@@612/@@613/@@629/@@630/@@639/@@640/@@6189/@@6028/@@6029/@@6030/@@6031/@@6032/Root/CentreNode/RingSystem/Ring6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 500, -200, 500, 1000 )
width = 1.0

[node name="Line2D2" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 340, 1000, 340 )
width = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
offset = Vector2( 512, 300 )
current = true
script = ExtResource( 13 )

[connection signal="pressed" from="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin1" to="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin1" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin2" to="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin2" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin3" to="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin3" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin4" to="CanvasLayer/UI/InfoUI/CenterContainer/InfoDialog/RingContainer/VBoxContainer/GridContainer/LBin4" method="_on_Button_pressed"]
[connection signal="toggled" from="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer/BuildMode" to="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer/BuildMode" method="_on_Button_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer/Pause" to="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer/Pause" method="_on_Pause_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer/Outlines" to="CanvasLayer/UI/MainUI/MarginContainerTop/CenterContainer/HBoxContainer/Outlines" method="_on_Outlines_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer/IronButton0" to="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer/IronButton0" method="_on_Button_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer/CopperButton0" to="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer/CopperButton0" method="_on_Button_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer/SilicaButton0" to="CanvasLayer/UI/MainUI/MarginContainerSide/CenterContainer/VBoxContainer/SilicaButton0" method="_on_Button_toggled"]
